# job_search

./: .gitignore  README.md  pyproject.toml
src/: API.py  load_vac.py  main.py  vacancies.py
tests/: test_API.py  test_load_vac.py  test_sorted_api.py  test_vacancies.py
