[project]
name = "job-search"
version = "0.1.0"
description = ""
authors = [
    {name = "Арина Новгородова",email = "arrrishanov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "pytest (>=8.4.2,<9.0.0)"
]


[tool.black]
line-length = 119
exclude = '''
/(
    \.git
    | \.venv
    | venv
)/'''

[tool.isort]
line_length = 119


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
